# fastapi-role-permission

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/basic_app/: main.py
fastapi_role_permission/: __init__.py  _state.py  cli.py  config.py  exceptions.py  migrations.py  registrar.py  seeders.py  setup.py  wildcard.py
fastapi_role_permission.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fastapi_role_permission/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
fastapi_role_permission/dependencies/: __init__.py  checks.py  openapi.py
fastapi_role_permission/middleware/: __init__.py  permission.py  role.py  role_or_permission.py
fastapi_role_permission/models/: __init__.py  base.py  mixins.py  permission.py  role.py
fastapi_role_permission/stubs/: create_rbac_tables.py
tests/: conftest.py  test_cache.py  test_integration.py  test_migrations.py  test_mixins.py  test_models.py  test_wildcard.py
