[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-role-permission"
version = "0.1.0"
description = "RBAC for FastAPI inspired by Laravel Spatie Permission — roles, permissions, teams, Redis cache"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["fastapi", "rbac", "roles", "permissions", "authorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "anyio[trio]>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_role_permission*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
