[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-role-permission"
version = "0.1.0"
description = "RBAC for FastAPI inspired by Laravel Spatie Permission — roles, permissions, teams, Redis cache"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["fastapi", "rbac", "roles", "permissions", "authorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "anyio[trio]>=4.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/MehranDashti/fastapi-role-permission"
Documentation = "https://github.com/MehranDashti/fastapi-role-permission#readme"
Repository = "https://github.com/MehranDashti/fastapi-role-permission"
"Bug Tracker" = "https://github.com/MehranDashti/fastapi-role-permission/issues"
Changelog = "https://github.com/MehranDashti/fastapi-role-permission/blob/main/CHANGELOG.md"

[project.scripts]
fastapi-rbac = "fastapi_role_permission.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_role_permission"]

[tool.hatch.build.targets.sdist]
include = ["fastapi_role_permission", "tests", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["fastapi_role_permission"]
omit = ["fastapi_role_permission/stubs/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
